--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
 *	Edit this section
 *
 * ======================================================= */
+.social {
+  margin: auto 5px;
+}
+
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
@@ -104,7 +108,7 @@ figure {
     border-radius: 50%; }
   #colorlib-aside .position {
     display: block;
-    margin-bottom: 2em;
+    margin-bottom: 0;
     font-size: 12px;
     text-transform: uppercase; }
   #colorlib-aside #colorlib-logo {
